corrected reference to logger in tasks modified templates minor updates on models

--- a/templates/inventory/category.html
+++ b/templates/inventory/category.html
@@ -5,9 +5,9 @@
 
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center">
-        <h2 class="h4">Categorie Aziende</h2>
+        <h2 class="h4">Categorie Prodotti</h2>
         <button class="btn bg-dark text-white" type="button" data-bs-toggle="collapse" data-bs-target="#createCategoryForm" aria-expanded="false" aria-controls="createCategoryForm">
-            Aggiungi Categoria Aziendale
+            Aggiungi Categoria Prodotto
         </button>
     </div>
 
@@ -30,14 +30,14 @@
         <input type="text" id="searchInput" class="form-control" placeholder="Cerca categoria...">
     </div>
 
-    <!-- Tabella delle categorie aziendali -->
+    <!-- Tabella delle categorie prodotto -->
     <div class="mt-4">
-        <h3 class="h5">Lista Categorie Aziendali</h3>
+        <h3 class="h5">Lista Categorie Prodotto</h3>
         <table id="categoryTable" class="table table-bordered w-100">
             <thead>
                 <tr>
                     <th>Nome</th>
-                    <th>Parent</th>
+                    <th>Categoria Superiore</th>
                     <th>Azioni</th>
                 </tr>
             </thead>
@@ -46,7 +46,7 @@
                     <tr class="category-item">
                         <td>{{ info.category.name }}</td>
                         <td>{{ info.category.parent }}</td>
-                        <td>
+                        <td class="col-md-2">
                             <!-- Form per eliminare una categoria -->
                             <form method="post" style="display:inline;">
                                 {% csrf_token %}
@@ -56,32 +56,36 @@
                                 </button>
                             </form>
 
-                            <!-- Pulsante per mostrare il form di modifica -->
-                            <button class="btn bg-dark text-white btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#updateForm-{{ info.category.id }}" aria-expanded="false" aria-controls="updateForm-{{ info.category.id }}">
+                            <!-- Pulsante per mostrare il modal di modifica -->
+                            <button class="btn bg-dark text-white btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#updateModal-{{ info.category.id }}">
                                 Modifica
                             </button>
                         </td>
                     </tr>
-                    <tr>
-                        <td colspan="3">
-                            <!-- Form per aggiornare una categoria -->
-                            <div class="collapse mt-3" id="updateForm-{{ info.category.id }}">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <form method="post">
-                                            {% csrf_token %}
-                                            {{ info.form.as_p }}
-                                            <input type="hidden" name="category_id" value="{{ info.category.id }}">
-                                            <button type="submit" name="update_category" class="btn bg-dark text-white">Salva Modifiche</button>
-                                        </form>
-                                    </div>
+
+                    <!-- Modal per aggiornare una categoria -->
+                    <div class="modal fade" id="updateModal-{{ info.category.id }}" tabindex="-1" aria-labelledby="updateModalLabel-{{ info.category.id }}" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="updateModalLabel-{{ info.category.id }}">Modifica Categoria</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form method="post">
+                                        {% csrf_token %}
+                                        {{ info.form.as_p }}
+                                        <input type="hidden" name="category_id" value="{{ info.category.id }}">
+                                        <button type="submit" name="update_category" class="btn bg-dark text-white">Salva Modifiche</button>
+                                    </form>
                                 </div>
                             </div>
-                        </td>
-                    </tr>
+                        </div>
+                    </div>
+
                 {% empty %}
                     <tr>
-                        <td colspan="3">Nessuna categoria aziendale disponibile.</td>
+                        <td colspan="3">Nessuna categoria disponibile.</td>
                     </tr>
                 {% endfor %}
             </tbody>
